--- a/site-motivation.Rmd
+++ b/site-motivation.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Motivation & Goals"
 author: ""
-date: "12/12/2021"
+date: ""
 output: html_document
 ---
 
@@ -34,22 +34,29 @@ Being able to predict Capital Bikeshare demand, could result in a more efficient
 
 # Data
 
-We use Capital Bikeshare's publicly available [historic data](https://www.capitalbikeshare.com/system-data), ranging from May 2020 until September 2021. After data cleaning, our dataset has 309197 rows (CONFIRM?), each indicating the number of hours that departed Lincoln Memorial at a certain hour.
+We use Capital Bikeshare's publicly available [historic data](https://www.capitalbikeshare.com/system-data), ranging from May 2020 until September 2021. The reason we chose this range is that before May 2020, the data were collected in a different format.
+
+Our unit of observation is departures by the hour. So we would expect 24 rows per day. Since we have 17 months worth of data, we would expect roughly 365x24 + 150x24= 12360 observations. In fatc, after data cleaning, our dataset has 309197 rows (CONFIRM?), each indicating the number of hours that departed Lincoln Memorial at a certain hour.
 
 For weather predictors we used data from ADD
 
 For sunlight we used data from ADD
 
 
-# Overall method
+# Models performed
 
-here is where we explain why we used certain algorithms versus others - I thinkw e are using parametric algorithm because we have a very wide dataset?
+We run three different models:
 
-We start with a simple decision tree. Then random forest with hyperparameter tuning.
+* Decision tree
+* Random forest
+* Lasso
 
+We start with a decision tree given the size and complexity of our data . We then do a random forest, which is a more complex version of a decision tree and we expect to do better than the decision tree. We then move on to lasso, which belongs to a different class of models. It performs variable selection and, unlike decision trees and random forests, it is parametric and so it will give us coefficients.
 
-### Error Metric 
+# Error Metric Choice
 
-We will use RMSE as our error metric to judge how well our models do. RMSE is very sensitive to outlines as it squares them resulting in a bigger error. From the exploration done above, I would expect a large RMSE as the range within and across days in terms of hourly departures is wide regardless of the hour. How much error is too much depends on how loose or strict we want to predict our outcomes. For our project, some error is probably accepted but being too loose in deciding what the error would be might cost the company money and decrease efficiency because they might be overprovidng or underproviding bikes at their stations. Based on the average departures per hour on any given day *insert number* , I think an RMSE of 2-3 would be acceptable
+We will use RMSE as our error metric to judge how well our models do. RMSE is very sensitive to outliers as it squares them resulting in a bigger error compared to MAE for example. From the exploration done above, we know that there is a wide range within (e.g. in some hours it is 0, for example at night) and across days (e.g. for instance there are very few rides on Christmas day) in terms of hourly departures. Our motivation for this project is to reduce the chance that there will be no bikes available so that the service is more reliable. Therefore, we think that the RMSE will be better for our application purposes because it penalizes more the outliers that we do have in our data.
+
+How much error is too much depends on how loose or strict we want to predict our outcomes. For our project, some error is probably accepted but being too loose in deciding what the error could be too costly. Based on the average departures per hour on any given day *insert number* , we think an RMSE of 2-3 would be acceptable
 
 
