--- a/visualizations.Rmd
+++ b/visualizations.Rmd
@@ -237,10 +237,16 @@ train_data_date %>%
 ```{r holidays}
 
 # prep training data for holiday barchart - 1 year of data from May 2020 to April 2021
+# bar_date <- train_data_date %>%
+#   filter(year==2020 | year==2021 & month== "Jan" | year==2021 & month== "Feb"|year==2021 & month== "Mar"|year==2021 & month== "Apr") %>%
+#   group_by(day, month, year)%>%
+#   summarise(lincoln_memorial_departures=sum(lincoln_memorial_departures), n())
+
 bar_date <- train_data_date %>%
-  filter(year==2020 | year==2021 & month== "Jan" | year==2021 & month== "Feb"|year==2021 & month== "Mar"|year==2021 & month== "Apr") %>%
+  filter(year==2021 & month== "Jan" & day=="1") %>%
   group_by(day, month, year)%>%
-  summarise(lincoln_memorial_departures=sum(lincoln_memorial_departures))
+  summarise(lincoln_memorial_departures=sum(lincoln_memorial_departures), n())
+
 
 ## confirmed: 365 days exist in this data frame
 # check for missingness 
@@ -269,9 +275,9 @@ holidays_date <- left_join(bar_date, holidays, by= c('year', 'month', 'day')) %>
     na.omit(holidays) 
 
 holidays_date %>%
-  ggplot(aes(y=lincoln_memorial_departures, x=holiday, fill=lincoln_memorial_departures)) + 
-  geom_bar(stat="identity")+
-  geom_hline(yintercept = 1279, color="blue")+ ## 1279 is the mean ridership per day
+  ggplot(aes(y= holiday, x= lincoln_memorial_departures , fill=lincoln_memorial_departures)) + 
+  geom_col()+
+  geom_vline(xintercept = 1279, color="blue")+ ## 1279 is the mean ridership per day
   xlab("") +
   ylab("Number of departures") +
   scale_colour_discrete("Holidays")+
@@ -280,6 +286,7 @@ holidays_date %>%
   theme_minimal() +
   theme(plot.caption = element_text(face = "italic")
   ) 
+
 
  ggsave("holidaybar.jpg", width = 50, height = 20, units = "cm")
 
